# gazebros2nix

./: .mergify.yml  .pre-commit-config.yaml  README.md  flake.nix  flakoboros-json.nix  gazebo2nix.toml  generated.nix  hashes.json  module.nix  overlay.nix  pal.nix  pyproject.toml  ros2nix.toml  todo.nix
.github/workflows/: ci.yml  json.yml  update-flake-inputs.yml  update-flake-lock.yml
garbage/: README.md  default.nix
garbage/freeimage/: CVE-2020-24292.patch  CVE-2020-24293.patch  CVE-2020-24295.patch  CVE-2021-33367.patch  CVE-2021-40263.patch  CVE-2021-40266.patch  CVE-2023-47995.patch  CVE-2023-47997.patch  package.nix  unbundle.diff
garbage/libjpeg_turbo-freeimage/: 0001-Compile-transupp.c-as-part-of-the-library.patch  0002-Make-exported-symbols-in-transupp.c-weak.patch  mingw-boolean.patch  package.nix
gazebo-pkgs/: building_robot.sdf
gazebo-pkgs/fortress/: ign-cmake2.nix  ign-common4.nix  ign-fuel-tools7.nix  ign-gazebo6.nix  ign-gui6.nix  ign-launch5.nix  ign-math6.nix  ign-msgs8.nix  ign-physics5.nix  ign-plugin1.nix  ign-rendering6.nix  ign-sensors6.nix  ign-tools1.nix  ign-transport11.nix  ign-utils1.nix  ignition-cmake.nix  ignition-cmake2.nix  ignition-common.nix  ignition-common4.nix  (+27 more)
pkgs/: cleanNixCflagsCompileHook.nix  colmpc.nix  gazebo2nix.nix  gazebros2nix-venv.nix  gazebros2nix.nix  libogre-next-23-dev.nix  libqt6svg6.nix  libzenohc-dev.nix  libzenohcpp-dev.nix  ogre1_9.nix  qml6-module-qtpositioning.nix  qt6-5compat-dev.nix  qt6-base-private-dev.nix  ros2nix.nix  xmllintPackageHook.nix
py-pkgs/: colmpc.nix  gazebros2nix.nix
(+414 files in other folders)
