[project]
name = "gazebros2nix"
version = "0.1.0"
description = "Generate and maintain Nix packages from gazebodistro & ROS package.xmls"
readme = "README.md"
authors = [
    { name = "Guilhem Saurel", email = "guilhem.saurel@laas.fr" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"
