[project]
name = "gazebros2nix"
version = "0.1.0"
description = "Generate and maintain Nix packages from gazebodistro & ROS package.xmls"
readme = "README.md"
authors = [
    { name = "Guilhem Saurel", email = "guilhem.saurel@laas.fr" }
]
requires-python = ">=3.12"
dependencies = [
    "case-converter>=1.2.0",
    "catkin-pkg>=1.0.0",
    "jinja2>=3.1.6",
    "pygithub>=2.8.0",
    "pyyaml>=6.0.2",
]

[project.scripts]
gazebo2nix = "gazebros2nix:gazebo2nix"
ros2nix = "gazebros2nix:ros2nix"

[build-system]
# requires = ["uv_build>=0.8.2,<0.9.0"]
# build-backend = "uv_build"
build-backend = "hatchling.build"
requires = ["hatchling"]
